--- a/Index.cshtml
+++ b/Index.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Index - iPortfolio Bootstrap Template</title>
+    <title>Index - Sedzani Muthivhi's Iprofile</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -35,7 +35,7 @@
         <i class="header-toggle d-xl-none bi bi-list"></i>
 
         <div class="profile-img">
-            <img src="assets/img/Sedzani.jpg" alt="" class="img-fluid rounded-circle">
+            <img src="assets/img/New SEDZ.JPG" alt="" class="img-fluid rounded-circle">
         </div>
 
         <a href="index.html" class="logo d-flex align-items-center justify-content-center">
