--- a/SedzaniMuthivhi-iProfile/wwwroot/Index.cshtml
+++ b/SedzaniMuthivhi-iProfile/wwwroot/Index.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Index - iPortfolio Bootstrap Template</title>
+    <title>Index - Sedzani Muthivhi </title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -69,7 +69,7 @@
         <!-- Hero Section -->
         <section id="hero" class="hero section dark-background">
 
-            <img src="assets/img/Sedzman.jpg" alt="" data-aos="fade-in" class="">
+            <img src="assets/img/New SEDZ.JPG" alt="" data-aos="fade-in" class="">
              
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <h2>Sedz Muthivhi</h2>
